@@ -12,9 +12,6 @@ GitCheck.allow_dirty = Changes
 GitCheck.allow_dirty = README.md
 GatherDir.exclude_match = dist.ini$
 
-[ModuleShareDirs]
-Dist::Zilla::MintingProfile::Author::CHIM = profiles
-
 [Prereqs]
 perl                                                = 5.008009
 strict                                              = 0
