@@ -1,17 +1,15 @@
-name             = My-Cool-Module
-version          = 1.00
-author           = John Doe <jdoe@cpan.org>
-license          = Perl_5
-copyright_holder = John Doe
-copyright_year   = 2013
-main_module      = lib/My/Cool/Module.pm
+name                        = My-Cool-Module
+author                      = John Doe <jdoe@cpan.org>
+license                     = Perl_5
+copyright_holder            = John Doe
+copyright_year              = 2014
 
 [@Author::CHIM]
 dist = My-Cool-Module
 
 [Prereqs]
-perl                      = 5.008009
-strict                    = 0
-warnings                  = 0
-Some::Required::Module    = 0
-Another::Required::Module = 0
+perl                        = 5.008009
+strict                      = 0
+warnings                    = 0
+Some::Required::Module      = 0
+Another::Required::Module   = 0
