@@ -1,32 +1,0 @@
-package {{$name}};
-
-# ABSTRACT: {{$name}} isa blah-blah-blah..
-
-use strict;
-use warnings;
-use 5.008009;
-use Carp;
-
-# VERSION
-# AUTHORITY
-
-
-1;
-
-__END__
-
-=pod
-
-=encoding utf8
-
-=head1 SYNOPSYS
-
-=head1 DESCRIPTION
-
-=head1 METHODS/SUBROUTINES
-
-=head1 BUGS
-
-=head1 SEE ALSO
-
-=cut
