@@ -1,32 +1,0 @@
-[TemplateModule/:DefaultModuleMaker]
-template = package.template
-
-[GatherDir::Template]
-root = skel
-include_dotfiles = 1
-
-[GenerateFile / Generate-dotGitignore ]
-filename = .gitignore
-is_template = 1
-content = blib/
-content = .build/
-content = _build/
-content = cover_db/
-content = inc/
-content = Build
-content = !Build/
-content = Build.bat
-content = .last_cover_stats
-content = Makefile
-content = Makefile.old
-content = MANIFEST.bak
-content = META.*
-content = MYMETA.*
-content = nytprof.out
-content = pm_to_blib
-content = {{ $dist->name }}-*
-content = *.orig
-content = *.bak
-content = *.swp
-content = *.patch
-content = *.rej
