@@ -1,32 +1,0 @@
-{{
-    $main_module = $dist->name;
-    $main_module =~ s|-|\/|g;
-    $license = ref $dist->license;
-    if ($license =~ /^Software::License::(.+)$/) {
-        $license = $1;
-    }
-    else {
-        $license = 'Perl_5';
-    }
-    '';
-}}name                    = {{ $dist->name }}
-version                 = 0.001
-author                  = {{ $dist->authors->[0] }}
-license                 = {{ $license }}
-copyright_holder        = {{ $dist->copyright_holder }}
-copyright_year          = {{ (localtime)[5] + 1900 }}
-main_module             = {{ 'lib/' . $main_module . '.pm' }}
-
-[@Author::CHIM]
-dist = {{ $dist->name }}
-;fake_release = 1
-
-[Prereqs]
-perl                                = 5.008009
-strict                              = 0
-warnings                            = 0
-Carp                                = 0
-
-[Prereqs / TestRequires]
-Test::More                          = 0.98
-Test::Pod                           = 1.22
