@@ -1,5 +1,0 @@
-Revision history for Perl extension {{ $_ = $dist->name; s|-|::|g; $_ }}
-
-{{ "{{\$NEXT}}" }}
-
-    - initial commit/release
